<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/dating_login_bg"
    >


<LinearLayout
    android:layout_width="330dp"
    android:layout_height="494dp"
    android:orientation="vertical"
    android:background="@drawable/toastlogin_linear"
    android:layout_marginLeft="25dp"
    android:layout_marginTop="128dp"
    android:layout_marginRight="25dp"
    android:layout_marginBottom="46dp"
    android:gravity="center"
    >
<ImageView
    android:layout_width="13dp"
    android:layout_height="13dp"
    android:src="@mipmap/dating_login_pop_exit"
    android:layout_marginTop="5dp"
    android:layout_marginLeft="130dp"
    />
    <TextView
        android:layout_width="63dp"
        android:layout_height="29dp"
        android:text="登录"
        android:textColor="#FFA68151"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:gravity="center"


        />
    <LinearLayout
        android:id="@+id/et_account_lin"
        android:layout_width="283dp"
        android:layout_height="35dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/user_edit_bg"
        android:clickable="true">

        <ImageView
            android:layout_width="@dimen/x14"
            android:layout_height="@dimen/x18"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/x20"
            android:src="@mipmap/dating_login_acct"/>

        <com.example.zimuquan.circleofletters.ui.view.MyEditText
            android:id="@+id/et_account"
            style="@style/login_text_style"
            android:hint="@string/phone_login_hint_phone"
            />

        <ImageView
            android:id="@+id/pwd_showno"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginRight="20dp"
            android:background="@mipmap/dating_login_clearn_btn"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/et_pwd_lin"
        android:layout_width="283dp"
        android:layout_height="35dp"
        android:layout_below="@id/et_account_lin"
        android:layout_marginTop="@dimen/x15"
        android:background="@drawable/user_edit_bg"
        android:clickable="true">

        <ImageView
            android:layout_width="@dimen/x14"
            android:layout_height="@dimen/x18"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/x20"
            android:src="@mipmap/dating_login_pwd"/>

        <com.example.zimuquan.circleofletters.ui.view.MyEditText
            android:id="@+id/et_pwd"
            style="@style/login_text_style"
            android:hint="@string/phone_login_hint_authcode"
            android:inputType="textPassword"/>


        <View
            android:layout_width="1dp"
            android:layout_height="35dp"
            android:background="@color/user_color"
            />
        <TextView
            android:id="@+id/card_showhas"
            android:layout_width="@dimen/x100"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingLeft="@dimen/x7"
            android:paddingRight="@dimen/x7"
            android:textColor="@color/user_color"
            android:text="@string/phone_login_hint_has_authcode"
            android:textSize="@dimen/size_10"
            />

    </LinearLayout>

    <com.example.zimuquan.circleofletters.ui.view.OnclickButton
        android:id="@+id/login_btn"
        android:layout_width="263dp"
        android:layout_height="35dp"
        android:layout_below="@+id/et_pwd_lin"

        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@mipmap/dating_login_sure_btn"
        android:gravity="center"
        android:text="@string/phone_login_btn"
        android:textColor="@color/logn_btn_color"
        android:textSize="15sp"/>
    <TextView
        android:id="@+id/text_agreed_ok"
        android:layout_width="191dp"
        android:layout_height="15dp"
        android:text="完成注册既同意《用户协议及营私政策》"
        android:layout_below="@id/login_btn"
        android:textColor="#ffa3a3a3"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"

        android:textSize="10sp"/>


    <LinearLayout
        android:id="@+id/linear_text"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/text_agreed_ok"
        android:layout_marginTop="50dp"
        android:gravity="center"
        >
        <View
            android:layout_width="90dp"
            android:layout_height="1dp"
            android:background="@color/color_ffff5b5b"
            android:layout_gravity="center"
           android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            />
        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/phone_other_login"
            android:textColor="#FFA68151"
            android:textSize="12sp"
            android:layout_gravity="center"
            />

        <View
            android:layout_width="90dp"
            android:layout_height="1dp"
            android:background="@color/color_ffff5b5b"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/login_weixin_textbtn"
        android:layout_width="33dp"
        android:layout_height="36dp"
        android:text="@string/spashing_wechat"
        android:drawableTop="@mipmap/dating_login_wx_icon"
        android:layout_below="@id/linear_text"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="17dp"
android:textSize="8sp"
        android:textColor="@color/user_color"
        />
</LinearLayout>

</RelativeLayout>
